# AutoTrayIt

./: .gitignore  .gitmodules  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  README.md  README_CN.md  TrayIconManager.cpp  WindowManager.cpp  config.example.toml  main.cpp  main.h
inc/: TrayIconManager.h  WindowManager.h  main.h
src/: ConfigManager.cpp  TrayIconManager.cpp  WindowManager.cpp  main.cpp  version.rc.in
